# kspec_metrology

./: Fiducial_Main.ipynb  comm.ipynb  comm_analysis.ipynb  comm_exposure.py  full_utils.py  hotpix_removal_neighbor_median.py  main_comm.py  pyproject.toml  share_fib_pos.txt  test_main.ipynb
.ipynb_checkpoints/: test_main-checkpoint.ipynb
kspec_metrology/analysis/: Fiber_Configuration_250415.txt  findpeak.py  fitdistortion.py  matchfiber.py  mtlcal.py  utils.py
kspec_metrology/exposure/: libqhy.py  mtlexp.py  qhyccd.py
kspec_metrology/logging/: log.py
